<resources>
    <string name="app_name" translatable="false">Foobar</string>
    <string name="register">Register</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="display_name">Display Name</string>
    <string name="password">Password</string>
    <string name="foobar">FOOBAR</string>
    <string name="create_a_new_account">Create a new account</string>
    <string name="username">Username</string>
    <string name="upload_a_profile_photo">upload a profile photo</string>
    <string name="profile_image">profile_image</string>
    <string name="Already_have_an_Account">Already have an Account:</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_in">Sign In</string>
    <string name="upload_a_profile">upload a profile</string>
    <string name="do_not_have_an_account">Do not have an Account:</string>
    <string name="post">post</string>
    <string name="todo">TODO</string>
    <string name="zero">0</string>
    <string name="likes_string">likes</string>
    <string name="comments_string">comments</string>
    <string name="delete_post">Delete</string>
    <string name="what_is_on_your_mind">what is on your mind?</string>

    <string name="share_a_photo">Share a photo</string>
    <string name="delete">delete</string>
    <string name="edit">edit</string>

    <string name="settings">settings</string>
    <string name="add_a_post">add a post</string>
    <string name="logout">Logout</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="share_now_friends">Share Now (Friends)</string>
    <string name="share_to_feed">Share to Feed</string>
    <string name="copy_link">Copy Link</string>
    <string name="postSettings">postSettings</string>
    <string name="edit_post">Edit Post</string>
    <string name="edit_post_hint">Edit Post</string>
    <string name="save_changes">Save Changes</string>
    <string name="edit_photo">Edit Photo</string>
    <string name="BaseUrl">http://10.0.2.2:8080/api/</string>
    <string name="send_friend_request">send friend request</string>
    <string name="you_are_not_friends">You are not friends with this user. Send a friend request to see their posts.</string>
    <string name="no_posts_available">No Posts Available</string>
    <string name="friend_requests">friend requests</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="no_friend_requests">There are no friend requests</string>
    <string name="accept">accept</string>
    <string name="decline">decline</string>
    <string name="logout2">Logout</string>
    <string name="toggle_dark_mode">Toggle Dark Mode</string>
    <string name="update_info">Update Profile</string>

</resources>