<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activity.SignUp">


    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/switchMode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:thumb="@drawable/thumb"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:track="@drawable/track" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/foobar_head_line_signup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/foobar"
            android:textColor="#009688"
            android:textColorLink="#009655"
            android:textSize="48sp"
            android:textStyle="bold" />


        <TextView
            android:id="@+id/new_account_text_signup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/create_a_new_account"
            android:textColor="#096E80"
            android:textSize="16sp"
            android:textStyle="bold"
            tools:ignore="TextSizeCheck" />

        <EditText
            android:id="@+id/username_text_signup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:autofillHints=""
            android:drawableStart="@drawable/username_icon"
            android:ems="10"
            android:hint="@string/username"
            android:inputType="text"
            android:minHeight="48dp"
            android:padding="10sp"
            android:textColorHint="#546E7A" />

        <EditText
            android:id="@+id/password_text_signup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:autofillHints=""
            android:drawableStart="@drawable/password_icon"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:minHeight="48dp"
            android:textColorHint="#546E7A" />

        <EditText
            android:id="@+id/confirm_password_text_signup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:autofillHints=""
            android:drawableStart="@drawable/password_icon"
            android:ems="10"
            android:hint="@string/confirm_password"
            android:inputType="textPassword"
            android:minHeight="48dp"
            android:textColorHint="#546E7A" />

        <EditText
            android:id="@+id/display_name_text_signup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:autofillHints=""
            android:drawableStart="@drawable/username_icon"
            android:ems="10"
            android:hint="@string/display_name"
            android:inputType="text"
            android:minHeight="48dp"
            android:textColorHint="#546E7A" />

        <Button
            android:id="@+id/upload_photo_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:contentDescription="@string/upload_a_profile"
            android:text="@string/upload_a_profile_photo"
            android:textColor="#000000"
            app:backgroundTint="#068A7E" />

        <ImageView
            android:id="@+id/profile_image"
            android:layout_width="203dp"
            android:layout_height="154dp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:contentDescription="@string/profile_image"
            tools:srcCompat="@tools:sample/avatars" />

        <Button
            android:id="@+id/btnSignUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:text="@string/sign_up"
            android:textColor="#000000"
            app:backgroundTint="#068A7E" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/Already_have_ACC"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_weight="2"
                android:text="@string/Already_have_an_Account"
                android:textColor="@color/lavender"
                android:textSize="14sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/retSignIn"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginStart="8dp"
                android:layout_weight="1"
                android:text="@string/sign_in"
                android:textColor="#C52121"
                android:textSize="14sp"
                android:textStyle="bold" />
        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>