<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp"
        tools:context=".ui.activity.EditPostActivity">

        <TextView
            android:id="@+id/edit_post1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/edit_post"
            android:textSize="24sp"
            android:textStyle="bold"
            android:gravity="center_horizontal"
            android:padding="16dp"
            android:background="#068A7E"
            android:textColor="@android:color/white"/>

        <EditText
            android:id="@+id/editTextContent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/edit_post_hint"
            android:inputType="textMultiLine"
            android:minLines="4"
            android:maxLines="10"
            android:scrollbars="vertical" />

        <Button
            android:id="@+id/editPhotoBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:textColor="#000000"
            app:backgroundTint="#068A7E"
            android:text="@string/edit_photo" />

        <ImageView
            android:id="@+id/photoImg"
            android:layout_width="374dp"
            android:layout_height="382dp"
            tools:srcCompat="@tools:sample/avatars" />

        <Button
            android:id="@+id/btnSave"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/save_changes"
            android:textColor="#000000"
            app:backgroundTint="#068A7E"/>

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>