<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activity.CreatePostActivity">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent">
    <TextView
        android:id="@+id/createPostHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Create Post"
        android:textSize="24sp"
        android:textStyle="bold"
        android:gravity="center_horizontal"
        android:padding="16dp"
        android:background="#068A7E"
        android:textColor="@android:color/white"/>
    <EditText
        android:id="@+id/editTextPostContent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textMultiLine"
        android:minLines="4"
        android:hint="@string/what_is_on_your_mind"
        android:autofillHints="what's on your mind?" />
    <Button
        android:id="@+id/btn_upload_pic_post"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:textColor="#000000"
        app:backgroundTint="#068A7E"
        android:text="@string/share_a_photo"/>

    <ImageView
        android:id="@+id/post_pic"
        android:layout_width="match_parent"
        android:layout_height="426dp"
        tools:srcCompat="@tools:sample/avatars" />

    <Button
        android:id="@+id/buttonSubmitPost"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:textColor="#000000"
        app:backgroundTint="#068A7E"
        android:text="@string/post"/>

</LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>