<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="6dp"
    android:background="#FFFFFF">

    <LinearLayout
        android:id="@+id/topLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"> <!-- Nested LinearLayout for horizontal content -->

            <ImageView
                android:id="@+id/profile_pic"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/ic_close" />

            <TextView
                android:id="@+id/tvAuthor"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_weight="1"
                android:clickable="true"
                android:focusable="true"
                android:gravity="start"
                android:textSize="20sp" />

            <ImageButton
                android:id="@+id/postSettings"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:background="@android:color/transparent"
                android:src="@drawable/ic_post_settings"
                android:text="@string/postSettings"
                android:visibility="gone" />
        </LinearLayout> <!-- End of nested LinearLayout -->

        <!-- New TextView for the upload time -->
        <TextView
            android:id="@+id/tvUploadTime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="Upload Time"
            android:textSize="14sp" />

    </LinearLayout>

    <TextView
        android:id="@+id/tvContent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        app:layout_constraintTop_toBottomOf="@+id/topLayout" />

    <ImageView
        android:id="@+id/ivPic"
        android:layout_width="match_parent"
        android:layout_height="500dp"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="50dp"
        app:layout_constraintBottom_toTopOf="@+id/bottomLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvContent"
        tools:srcCompat="@tools:sample/avatars" />

    <LinearLayout
        android:id="@+id/bottomLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@id/bottomLayout">

        <TextView
            android:id="@+id/num_of_likes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:background="@android:color/transparent"
            android:gravity="end"
            android:text="@string/zero" />

        <TextView
            android:id="@+id/tvLikes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="3dp"
            android:layout_weight="0.4"
            android:background="@android:color/transparent"
            android:gravity="start"
            android:text="@string/likes_string"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/num_of_comments"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.4"
            android:background="@android:color/transparent"
            android:gravity="end"
            android:text="@string/zero" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="3dp"
            android:layout_weight="0.3"
            android:background="@android:color/transparent"
            android:gravity="start"
            android:text="@string/comments_string" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/bottomLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp"
        app:layout_constraintBottom_toBottomOf="parent">

        <ImageButton
            android:id="@+id/btnLike"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:src="@drawable/ic_like" />

        <ImageButton
            android:id="@+id/btnComment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:src="@drawable/ic_comment" />

        <ImageButton
            android:id="@+id/btnShare"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:src="@drawable/ic_share" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>